# VendingMachine

./: LICENSE
backend/proto/: test.proto
backend/shop/: Cargo.toml
backend/shop/src/: server.rs
backend/src/: server.rs
frontend/: package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
frontend/src/app/_model/: category.model.ts  entity.model.ts
frontend/src/app/_service/: category.service.ts  entity.service.ts
frontend/src/app/categories/: categories.component.css  categories.component.html  categories.component.ts
frontend/src/app/entity/: entity.component.css  entity.component.html  entity.component.ts
frontend/src/app/entity-list/: entity-list.component.css  entity-list.component.html  entity-list.component.ts
frontend/src/app/login/: login.component.css  login.component.html
